[Hotel App][feature] allow customer to book a room , handel booking endpoints .........
